--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,13 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6",
-        "squizlabs/php_codesniffer": "2.8.*"
+        "phpunit/phpunit": "^9.3.0",
+        "squizlabs/php_codesniffer": "3.5.*"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
+    },
+    "require": {
+        "php": "^7.4 || ~8.0.0"
     }
 }
